--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,74 +1,91 @@
+
 <div class="row">
-<div class="col-sm-12">
+  <div class="col-sm-6">
 
-<h1><%= @group.name %></h1>
-<h3><small><%= @group.desc %></small></h3>
+    <h1><%= @group.name %></h1>
+    <h3><small><%= @group.desc %></small></h3>
+    <% if current_user != nil and @is_member == true %>
+      <%= link_to("leave", :controller => "groups", :action => "leave", :id => params[:id]) %> |
+      <%= link_to 'create Event', new_event_path %> |
+    <% end %>
 
+    <%= link_to 'edit', edit_group_path(@group) %> |
+    <%= link_to 'back', groups_path %>
 
-<% if current_user != nil %>
-  <% if @is_member == true %>
-    <%= link_to("Leave", :controller => "groups", :action => "leave", :id => params[:id]) %> |
-  <% else %>
-    <%= link_to("Join", :controller => "groups", :action => "join", :id => params[:id])  %> | 
-  <% end %>
-  <%= link_to 'Create Event', new_event_path %> |
-<% end %>
+  </div>
+  <div class="col-sm-6">
+    <% if current_user != nil and @is_member == false  %>
+    <div class="pull-right">
+      <form action="/groups/join" class="form-inline" method="post">
+      <%= token_tag %>
+        
+        <div class="form-group">
+          <input id="req_id" class="form-control" placeholder="password to join" name="request_string" type="text" /><br />
+         </div>
+          <input id="group_id" name="group_id" type="hidden" value="<%= params[:id] %>">
+        <div class="form-group">
+          
+          <input class="btn btn-default" type="submit" value="join" />
+          </div>
+        </div>
+      </form>
+    </div>
+    <% end %>
 
-<%= link_to 'Edit', edit_group_path(@group) %> |
-<%= link_to 'Back', groups_path %>
-
-</div>
-<div class="col-sm-6"></div>
+  </div>
 </div>
 <hr>
 <div class="row">
-<div class="col-sm-12">
-<% if !@events.empty? %>
-<h3>scheduled events</h3>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>event</th>
-      <th>description</th>
-      <th>starts @</th>
-      <th>duration @</th>
-      <th>location</th>
-      <th>status</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div class="col-sm-12">
+    <% if !@events.empty? %>
+    <h3>scheduled events</h3>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>event</th>
+          <th>description</th>
+          <th>starts @</th>
+          <th>duration @</th>
+          <th>location</th>
+          <th>status</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @events.each do |event| %>
-      <tr>
-        <td><%= event.name %></td>
-        <td><%= event.desc %></td>
-        <td><%= event.start.strftime("%B %d, %Y at %I:%M %p"); %></td>
-        <td><%= event.end %></td>
-        <td>
-        <% if event.location != nil and event.location .to_s != '' %>
-          <%= event.location %>
-          <% else %>
+      <tbody>
+        <% @events.each do |event| %>
+        <tr>
+          <td><%= event.name %></td>
+          <td><%= event.desc %></td>
+          <td><%= event.start.strftime("%B %d, %Y at %I:%M %p"); %></td>
+          <td><%= event.end %></td>
+          <td>
+            <% if event.address != nil and event.address .to_s != '' %>
+            <%= event.address %>
+            <% else %>
             not specified
-          <% end %>
+            <% end %>
           </td>
-        <td>
-        <% if event.is_public == true %>
-          <span class="label label-success">public</span>
-        <% else %>
-          <span class="label label-danger">private</span>
+          <td>
+            <% if event.is_public == true %>
+            <span class="label label-success">public</span>
+            <% else %>
+            <span class="label label-danger">private</span>
+            <% end %>
+          </td>
+          
+          <td><%= link_to 'Show', event %></td>
+          <td><%= link_to 'Edit', edit_event_path(event) %></td>
+          <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
         <% end %>
-        </td>
-        
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      </tbody>
+    </table>
+    <% else %>
+    no upcoming events. make one!
     <% end %>
-  </tbody>
-</table>
-<% else %>
-no upcoming events. make one!
-<% end %>
+  </div>
 </div>
-</div>
+
+
+
