--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,6 +34,10 @@
 
       </div>
       <div class="col-sm-6">
+      
+      serv time <%= @server_time %><br>
+      
+      
         <h2>maps or demos</h2>
         Google maps of our users (cache this data once in a while)
         <br>
