--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,14 @@
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
-
-  <div><%= f.submit "Send me reset password instructions" %></div>
+<%= devise_error_messages! %>
+<div class="form-group">
+	<div><%= f.label :email %><br />
+		<%= f.email_field :email, autofocus: true, :class => "form-control" %></div>
+	</div>
+	<div class="form-group">
+		<div><%= f.submit "send me reset password instructions", :class => "btn btn-primary form-control" %></div>
+	</div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+	<%= render "devise/shared/links" %>
