--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,20 +1,32 @@
 <div class="row">
   <div class="col-sm-6">
     <h1>your events</h1>
+    <% time_now = Time.now %>
+
     <% if current_user != nil and @events.count != 0 %> 
     <table class="table table-striped">
     <% @events.each do |event| %>
     <% group = event.group %>
     <tr>
     <td>
-     <%= link_to event.name, event %> | <%= link_to group.name, group %>
-     <% in_days = ((event.start - Time.now) / 1.days).round(1) %>
+      <%= link_to event.name, event %> | <%= link_to group.name, group %>
+      <% days_until = ((event.start - time_now) / 1.days) %>
+      <% minutes_until = ((event.start - time_now) / 1.minutes) %>
+
+      <% event_end = (event.start + ( event.end * 1.hours)) %>
       <small class="pull-right">
-      <% if in_days <= 5 %>
-      in <%= in_days %> days
-      <% else %>
-        <%= event.start.strftime("%B %d, %Y at %I:%M %p")  %>
-        <% end %> 
+        <% if time_now >= event.start and time_now <= event_end %>
+          <%= link_to 'CHECK IN!', event %>, <%= ((event_end - time_now ) / 1.minutes).round %> minutes left
+        <% elsif minutes_until <= 60 %>
+          in <%= minutes_until.round %> minutes       
+        <% elsif days_until < 1 %>
+          in <%= ((days_until * 1.days) / 1.hours) %> hours
+        <% elsif days_until < 3 %>
+          in <%= days_until %> days
+        <% else %>
+          <%= event.start.strftime("%B %d, %Y at %I:%M %p")  %>
+        <% end %>
+
       </small>
       <br>
       |<% if !event.desc.empty? %>
@@ -35,20 +47,23 @@
   <div class="col-sm-6">
     <h1>local public events</h1>
     <% if @public_events.count > 0 %> 
-    
     <table class="table table-striped">
     <% @public_events.each do |event| %>
     <tr>
     <td>
      <%= link_to event.name, event %>
-      <% in_days = ((event.start - Time.now) / 1.days).round(1) %>
+      <% time_until = ((event.start - time_now) / 1.days) %>
+      <% event_end = (event.start + ( event.end * 1.hours)) %>
       <small class="pull-right">
-      <% if in_days <= 5 %>
-      in <%= in_days %> days
-      <% else %>
-        <%= event.start.strftime("%B %d, %Y at %I:%M %p")  %>
-        <% end %> 
-     
+        <% if time_now >= event.start and time_now <= event_end %>
+          <% link_to 'CHECK IN!', event %> 
+        <% elsif time_until > 1 %>
+          in <%= ((time_until * 1.days) / 1.hours) %> hours
+        <% elsif time_until > 3 %>
+          in <%= time_until %> days
+        <% else %>
+          <%= event.start.strftime("%B %d, %Y at %I:%M %p")  %>
+        <% end %>
       </small>
       <br>
       |<% if !event.desc.empty? %>
