--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
 <div class="col-sm-6">
 
-<h1>your groups <%= button_to 'make a group', {action: 'new'}, :class => 'btn btn-primary', :method => 'get' %></h1>
+<h1>your groups</h1>
 <% if current_user != nil %>
 
   <div class="list-group">
@@ -18,6 +18,7 @@
 register to make groups, join a groups, and start making alerts.
 
 <% end %>
+<%= button_to 'make a group', {action: 'new'}, :class => 'btn btn-primary', :method => 'get' %>
 </div>
   <div class="col-sm-6">
 <h1>local groups</h1>
