--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>edit <%= resource_name.to_s %></h2>
+<h2><span class="glyphicon glyphicon-user"></span> edit <%= resource_name.to_s %></h2>
 <div class="row">
   <div class="col-sm-12">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -23,6 +23,12 @@
             <div><%= f.label :phone_num %><br />
               <%= f.text_field :phone_num, :class => "form-control" %></div>
 
+              <div><%= f.label :country %><br>
+              <%= f.number_field :country, :class => "form-control"%>
+
+              </div>
+
+
               <label>Submit</label>
               <div><%= f.submit "update", :class => "btn btn-primary form-control" %></div>
               <% end %>
@@ -31,17 +37,18 @@
               <hr>
 
 
-              <h2>account help</h2>
+              <h2><span class="glyphicon glyphicon-question-sign"></span>account help</h2>
               <h4>unsync phone number <small>in case of a lost phone</small></h4>
               <p>
+                un-syncing your phone stops texts from being sent to your phone
                 <% if current_user.restriction_level == 0 %>
-                  <%= button_to 'unsync account', accounts_unsync_path, :class => "btn btn-warning btn-sm" %>
+                <%= button_to 'unsync account', accounts_unsync_path, :class => "btn btn-warning btn-sm" %>
                 <% elsif current_user.restriction_level == 1 %>
-                  <%= button_to 're-sync account', accounts_remove_restrictions_path, :class => "btn btn-success btn-sm" %>
+                <%= button_to 're-sync account', accounts_remove_restrictions_path, :class => "btn btn-success btn-sm" %>
 
                 <% end %>
               </p>
-              <h4>cancel account <small>cya</small></h4>
+              <h4>cancel account <small>l8r nerdz</small></h4>
               <p><%= button_to "delete my account", registration_path(resource_name), :class => "btn btn-danger btn-sm", data: { confirm: "Are you sure?" }, method: :delete %></p>
 
             </div>
