--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,140 +1,136 @@
 <div class="row">
-  <div class="col-sm-6">
-    <h1><%= @event.name %> 
-      <% if @has_attended == true %>
-      <label class="pull-right label label-success">attended!</label>
-      <% end %>
-    </h1>
-    <table class="table table-striped">
-      <tr>
-      <td>
-          name
-        </td>
-        <td>
-          <%= @event.name %>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          description 
-        </td>
-        <td>
-          <%= @event.desc %>
-        </td>
-      </tr>
-
-      <tr>
-        <td>
-          start
-        </td>
-        <td> 
-          <%= @event.start.strftime("%B %d, %Y at %I:%M %p").downcase %>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          duration 
-        </td>
-        <td>
-          <%= (@event.end * 1.minutes).round %> minutes
-        </td>
-      </tr>
-      <tr>
-      <td>
-        time zone
-        </td>
-        <td>
-        <%= @event.timezone %>
-        </td>
-        </tr>
-      <tr>
-        <td>
-          address 
-        </td>
-        <td>
-          <% if @event.address != nil %>
-            <%= @event.address %>
-          <% else %>
-            not specified
-          <% end %>
-        </td>
-      </tr>
-
-      <tr>
-        <td>
-          status
-        </td>
-        <td>
-          <% if @event.is_public == true %>
-          <label class="label label-success">public event</label>
-          <% else %>
-          <label class="label label-danger">private event</label>
-          <% end %>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          belongs to 
-        </td>
-        <td>
-          <%= link_to @group.name, @group %>
-        </td>
-      </tr>
-    </table>
-
-    <br>
-    <%= link_to 'Edit', edit_event_path(@event) %> |
-    <%= link_to 'Back', events_path %>
-
-  </div>
-  <div class="col-sm-6">
-    <div id="map-canvas">
-    </div>  
-    bitch
-  </div>
-</div>
-<div class="row">
-  <div class="col-sm-12">
-  <% if current_user %>
-    <h2>all alerts</h2> <%= link_to 'Make Alert', new_alert_path %>
-    <table class="table table-striped">
-      <thead>
+    <div class="col-sm-6">
+      <h1><%= @event.name %> 
+        <% if @has_attended == true %>
+        <label class="pull-right label label-success">attended!</label>
+        <% end %>
+      </h1>
+      <table class="table table-striped">
         <tr>
-          <th>scheduled for</th>
-          <th>sent</th>
-          <th>message</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @all_alerts.each do |alert| %>
-        <tr>
-          <td><%= alert.send_datetime.strftime("%B %d, %Y at %I:%M %p"); %></td>
           <td>
-            <% if alert.is_sent == true %>
-              <label class="label label-success">sent</label>
+            name
+          </td>
+          <td>
+            <%= @event.name %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            description 
+          </td>
+          <td>
+            <%= @event.desc %>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            start
+          </td>
+          <td> 
+            <%= @local_time.strftime("%B %d, %Y at %I:%M %p") %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            duration 
+          </td>
+          <td>
+            <%= (@event.end * 1.minutes).round %> minutes
+          </td>
+        </tr>
+        <tr>
+          <td>
+            time zone
+          </td>
+          <td>
+            <%= @event.timezone %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            address 
+          </td>
+          <td>
+            <% if @event.address != nil %>
+            <%= @event.address %>
             <% else %>
-              <label class="label label-danger">queued</label>
+            not specified
             <% end %>
           </td>
-          <td><%= alert.body %></td>
-          <td><%= link_to 'Show', alert %></td>
-          <td><%= link_to 'Edit', edit_alert_path(alert) %></td>
-          <td><%= link_to 'Destroy', alert, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
-        <% end %>
-      </tbody>
-    </table>
-  <% end %>
+
+        <tr>
+          <td>
+            status
+          </td>
+          <td>
+            <% if @event.is_public == true %>
+            <label class="label label-success">public event</label>
+            <% else %>
+            <label class="label label-danger">private event</label>
+            <% end %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            representitive 
+          </td>
+          <td>
+            <%= link_to @owner.email, @owner %> in <%= link_to @group.name, @group %>
+          </td>
+        </tr>
+      </table>
+
+      <br>
+      <%= link_to 'back', events_path %>
+      <% if current_user != nil and current_user.id == @event.user_id %>
+        | <%= link_to 'edit', edit_event_path(@event) %>
+      <% end %>
+    </div>
+    <div class="col-sm-6">
+      <div id="map-canvas">
+      </div>  
+      bitch
+    </div>
   </div>
-</div>
+   <div class="row">
+      <div class="col-sm-12">
+        <% if current_user != nil %>
+        <h2>all alerts</h2> <%= link_to 'Make Alert', new_alert_path %>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>scheduled for</th>
+              <th>sent</th>
+              <th>message</th>
+            </tr>
+          </thead>
 
-<hr>
+          <tbody>
+            <% @all_alerts.each do |alert| %>
+            <tr>
+              <td><%= alert.send_datetime.strftime("%B %d, %Y at %I:%M %p"); %></td>
+              <td>
+                <% if alert.is_sent == true %>
+                <label class="label label-success">sent</label>
+                <% else %>
+                <label class="label label-danger">queued</label>
+                <% end %>
+              </td>
+              <td><%= alert.body %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <% end %>
+      </div>
+    </div>
 
 
-<script type="text/javascript"
-src="https://maps.googleapis.com/maps/api/js?sensor=true">
+
+  <script type="text/javascript"
+  src="https://maps.googleapis.com/maps/api/js?sensor=true">
 </script>
 <script type="text/javascript">
   function initialize() {
