--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -5,7 +5,7 @@
 			<li class="active"><a href="#about" role="tab" data-toggle="tab">about</a></li>
 			<li><a href="#examples" role="tab" data-toggle="tab">demos</a></li>
 			<li><a href="#team" role="tab" data-toggle="tab">our team</a></li>
-			<li><a href="#help" role="tab" data-toggle="tab">help</a></li>
+			<li><a href="#help" role="tab" data-toggle="tab">help <span class="glyphicon glyphicon-question-sign"></span></a></li>
 		</ul>
 	</div>
 </div>
@@ -14,10 +14,10 @@
 <div class="tab-content">
 	<div class="tab-pane fade in active" id="about">
 		<h1>about <%= BRAND_NAME %></h1>
-		<h3>what is <%= BRAND_NAME %>?</h3>
+		<h3>what is <%= BRAND_NAME %>? <span class="glyphicon glyphicon-leaf"></span></h3>
 		created in 2014 during HackMidwest by a few University of Missouri students, <%= BRAND_NAME %> is the solution to keeping track of reminding and tallying attendance to meetings, chapters, and other group events.
 		
-		<h3>is it free?</h3>
+		<h3>is it free? <span class="glyphicon glyphicon-shopping-cart"></span></h3>
 		yeah. for now. these texts cost money to send, so we'll eventually charge just for the overhead we're taking on now. we're considering a $10 monthly subscription.
 		
 		<h3>why via text?</h3>
@@ -34,12 +34,12 @@
 		5 dudes who go to Mizzou. see the team tab for more detail
 	</div>
 	<div class="tab-pane fade" id="examples">
-		<h1>demos</h1>
+		<h1>demos <span class="glyphicon glyphicon-phone"></span></h1>
 		beautiful iphone graphics
 
 	</div>
 	<div class="tab-pane fade" id="team">
-	<h1>developers</h1>
+	<h1>developers <span class="glyphicon glyphicon-link"></span></h1>
 		<h3>collaborators</h3>
 		<ul>
 			<li>
@@ -58,7 +58,7 @@
 				Georgi Angelov
 			</li>
 			<li>
-				Pat McAvoy
+				Pat Macintosh
 			</li>
 		</ul>
 	</div>
