--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -14,32 +14,32 @@
 <div class="tab-content">
 	<div class="tab-pane fade in active" id="about">
 		<h1>about <%= BRAND_NAME %></h1>
-		<h3>what is <%= BRAND_NAME %>? <span class="glyphicon glyphicon-leaf"></span></h3>
+		<h3><span class="glyphicon glyphicon-leaf"></span> what is <%= BRAND_NAME %>?</h3>
 		created in 2014 during HackMidwest by a few University of Missouri students, <%= BRAND_NAME %> is the solution to keeping track of reminding and tallying attendance to meetings, chapters, and other group events.
 		
-		<h3>is it free? <span class="glyphicon glyphicon-shopping-cart"></span></h3>
+		<h3><span class="glyphicon glyphicon-shopping-cart"></span> is it free?</h3>
 		yeah. for now. these texts cost money to send, so we'll eventually charge just for the overhead we're taking on now. we're considering a $10 monthly subscription.
 		
-		<h3>why via text?</h3>
+		<h3><span class="glyphicon glyphicon-send"></span> why via text?</h3>
 		we want to use texting because it's universal and it's more personal, as these groups should be.
 		
-		<h3>why u no use capitals?</h3>
+		<h3><span class="glyphicon glyphicon-text-height"></span> why u no use capitals?</h3>
 		you're reading this fine. ask yourself why we still need capitalized sentences.
 		
 
-		<h3>how safe is my data?</h3>
+		<h3><span class="glyphicon glyphicon-globe"></span> how safe is my data?</h3>
 		few things here. (1) we don't see your data. (2) we don't sell your data. (3) your data is hidden behind a strong authentication process. and lastly (4) you're literally just a (phone) number to us, so it's very impersonal.
 		
-		<h3>who made this?</h3>
-		5 dudes who go to Mizzou. see the team tab for more detail
+		<h3><span class="glyphicon glyphicon-cog"></span> who made this?</h3>
+		5 gentlemen who attend University of Missouri-Columbia. see the team tab for more detail
 	</div>
 	<div class="tab-pane fade" id="examples">
-		<h1>demos <span class="glyphicon glyphicon-phone"></span></h1>
+		<h1><span class="glyphicon glyphicon-phone"></span> demos</h1>
 		beautiful iphone graphics
 
 	</div>
 	<div class="tab-pane fade" id="team">
-	<h1>developers <span class="glyphicon glyphicon-link"></span></h1>
+	<h1><span class="glyphicon glyphicon-link"></span> developers</h1>
 		<h3>collaborators</h3>
 		<ul>
 			<li>
