changed end to duration because of reserved word

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="field">
     <label>dutation in hours</label>
-    <%= f.number_field :end, :class => "form-control", :min => 0, :step => 0.25, :placeholder => "event duration" %>
+    <%= f.number_field :duration, :class => "form-control", :min => 0, :step => 0.25, :placeholder => "event duration" %>
   </div>
   
   <div class="field">
