--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	<%= csrf_meta_tags %>
 	<script src="http://d3js.org/d3.v3.min.js"></script>
+	<script src="https://raw.githubusercontent.com/qrohlf/trianglify/gh-pages/trianglify.min.js"></script>
 
 </head>
 <body>
