prettied up timezones

--- a/app/views/confirmations/index.html.erb
+++ b/app/views/confirmations/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>User ID</th>
-      <th>EVent ID</th>
+      <th>Event ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
