--- a/app/views/confirmations/_form.html.erb
+++ b/app/views/confirmations/_form.html.erb
@@ -22,6 +22,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Check in" %>
+    <%= f.submit "Check in", :class => "btn btn-primary" %>
   </div>
 <% end %>
