--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -5,7 +5,7 @@
 			<li class="active"><a href="#about" role="tab" data-toggle="tab">about</a></li>
 			<li><a href="#examples" role="tab" data-toggle="tab">demos</a></li>
 			<li><a href="#team" role="tab" data-toggle="tab">our team</a></li>
-			<li><a href="#help" role="tab" data-toggle="tab">help <span class="glyphicon glyphicon-question-sign"></span></a></li>
+			<li><a href="#help" role="tab" data-toggle="tab">help</a></li>
 		</ul>
 	</div>
 </div>
