--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="inline pull-right" style="margin-top:-10px">
-  usr <%= @users %> | grp <%= @groups %> | evnt <%= @events %> | alrt <%= @alerts %>
+  users <%= @users %> | groups <%= @groups %> | events <%= @events %> | alerts <%= @alerts %>
 </div>
 <div class="row">
   <div class="col-sm-12">
@@ -37,8 +37,6 @@
 
       </div>
       <div class="col-sm-6">
-      
-      serv time <%= @server_time %><br>
       
       
         <h2>maps or demos</h2>
