--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 	<%= csrf_meta_tags %>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/trianglify/0.1.3/trianglify.min.js"></script>
 	<script src="http://d3js.org/d3.v3.min.js"></script>
+	<link rel="shortcut icon" href="<%=asset_path "images/heart.ico"%>">
 
 </head>
 <body style="font-weight:200">
